// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integration should return results from real server: no options 1`] = `
{
  "brand": "Powlowski, Brekke and Hamill",
  "description": "The slim & simple Maple Gaming Keyboard from Dev Byte comes with a sleek body and 7- Color RGB LED Back-lighting for smart functionality",
  "id": 20,
  "name": "Bespoke Granite Keyboard",
  "price": 14,
}
`;

exports[`integration should return results from real server: with options 1`] = `
{
  "_highlightResult": {
    "description": {
      "fullyHighlighted": false,
      "matchLevel": "full",
      "matchedWords": [],
      "value": "The slim & simple Maple Gaming __ais-highlight__Keyboard__/ais-highlight__ from Dev Byte comes with a sleek body and",
    },
    "name": {
      "fullyHighlighted": false,
      "matchLevel": "full",
      "matchedWords": [],
      "value": "__ais-highlight__Bespoke__/ais-highlight__ Granite __ais-highlight__Keyboard__/ais-highlight__",
    },
  },
  "description": "The slim & simple Maple Gaming Keyboard from Dev Byte comes with a sleek body and 7- Color RGB LED Back-lighting for smart functionality",
  "id": 20,
  "name": "Bespoke Granite Keyboard",
  "price": 14,
}
`;
